Fixed Layout Issues

--- a/components/ui/Button/Button.module.css
+++ b/components/ui/Button/Button.module.css
@@ -1,9 +1,9 @@
 .root {
-  @apply bg-white text-zinc-800 cursor-pointer inline-flex px-10 rounded-sm leading-6  transition ease-in-out duration-150 shadow-sm font-semibold text-center justify-center uppercase py-4 border border-transparent items-center;
+  @apply w-full mt-6 bg-[#3a0ca3] text-white font-bold py-2 px-4 rounded-md transition duration-300;
 }
 
 .root:hover {
-  @apply bg-zinc-800 text-white border border-white;
+  @apply bg-[#4c1cd4] text-white;
 }
 
 .root:focus {
