--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply sticky top-0 bg-[#3a0ca3] z-40 transition-all duration-150 h-16 md:h-20;
+  @apply top-0 z-40 transition-all duration-150 h-16 md:h-20;
 }
 
 .link {
